--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -462,6 +462,8 @@
     <string name="customize_toggle_pocket">Pocket</string>
     <!-- Title for preference to open wallpapers -->
     <string name="preferences_wallpapers">Wallpapers</string>
+    <!-- Content description for various wallpapers -->
+    <string name="content_description_wallpaper_name">Wallpaper Item: %1$s</string>
 
     <!-- Add-on Installation from AMO-->
     <!-- Error displayed when user attempts to install an add-on from AMO (addons.mozilla.org) that is not supported -->
